hw5/python_app/bondiana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bondiana
  labels:
    app: bondiana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bondiana
  template:
    metadata:
      labels:
        app: bondiana
    spec:
      containers:
        - name: bondiana-container
          image: diacrome/bondiana:0.7
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-data-getter
  labels:
    app: external-data-getter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-data-getter
  template:
    metadata:
      labels:
        app: external-data-getter
    spec:
      containers:
        - name: external-data-getter-container
          image: diacrome/moex-bonds:0.16
          ports:
            - containerPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  labels:
    app: notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
        - name: notifier
          image: diacrome/bondiana-notifier:0.2
          ports:
            - containerPort: 8002
